Fixed thumbnail align in map's infowindow on mobile devices

--- a/src/webserver/private/less/main.less
+++ b/src/webserver/private/less/main.less
@@ -36,6 +36,7 @@ a:active,
 	color: @theme-color-primary;
 	cursor: pointer;
 }
+
 .as-a-link:hover {
 	text-decoration: underline;
 }
@@ -52,29 +53,39 @@ hr {
 	margin-top: 2em;
 	height: 30em;
 	width: 100%;
-}
 
-#map-info-window {
-	font-size: 1.1em;
+	#map-info-window {
+		font-size: 1.1em;
 
-	h6 {
-		text-align: center;
-		margin-top: 0.5em;
-	}
-
-	.image img {
-		border-radius: 1em;
-	}
-
-	.content {
-		padding-left: 0.5em;
-
-		ul {
-			padding-left: 1em;
+		h6 {
+			text-align: center;
+			margin-top: 0.5em;
 		}
 
-		button {
-			width: 100%;
+		.image {
+			text-align: center;
+			@media (max-width: 767px) {
+				margin-bottom: 0.5em;
+			}
+
+			a {
+				img {
+					border-radius: 1em;
+					text-align: center;
+				}
+			}
+		}
+
+		.content {
+			padding-left: 0.5em;
+
+			ul {
+				padding-left: 1em;
+			}
+
+			button {
+				width: 100%;
+			}
 		}
 	}
 }
